syntax = "proto3";

message ChannelPayload {
  EventState event_state = 1;
  // Deprecated as of db format v1.2.0. In db v1.2.0 and later, use SendCount message instead.
  int32 deprecated_send_count = 2;
}

message SendCount {
  int32 send_count = 1;
}

message EventTimePayload {
  sfixed64 create_time = 1;
}

message IndexPayload {
  string event_id = 1;
  // sfixed64 create_time = 2;
  int64 version = 3;
}

message EventPayload {
  bytes payload = 1;
  EventState default_event_state = 2;
  repeated string indexes = 3;
}

enum EventState {
  UNSPECIFIED_STATE = 0;
  QUEUED = 1;
  QUEUED_LINEAR = 7;
  QUEUED_CONSTANT = 8;
  OK = 2;
  INVALID = 4;
  INTERNAL = 5;
  SEND_LIMIT_EXCEEDED = 6;
  DEQUEUED_ERROR = 3;
}